# ny-taxi-prediction

./: .gitignore  README.md  params.yaml  pyproject.toml
models/: model.joblib  preprocessor.joblib
notebooks/: 02_feature_engineering.ipynb  03_modeling.ipynb  eda.ipynb
src/ny_taxi_prediction/: __init__.py  config.py  data.py  features.py  modeling.py  plots.py  train.py  utils.py
